--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,5 +68,5 @@
         "typeinfo": "cpp",
         "valarray": "cpp"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "enabled"
 }
